<resources>
    <string name="app_name">MVVM Running</string>
    <string-array name="filter_options">
        <item>Date</item>
        <item>Running Time</item>
        <item>Distance</item>
        <item>Average Speed</item>
        <item>Calories Burned</item>
    </string-array>
    <string-array name="target_types">
        <item>Time</item>
        <item>Distance</item>
        <item>Calories</item>
        <item>None</item>
    </string-array>
    <string-array name="target_types_measurements">
        <item>min</item>
        <item>m</item>
        <item>kcal</item>
        <item>regular run</item>
    </string-array>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBuhhawpoGghH-trqUuTp5MqrgwfZOGIyg</string>
    <string name="welcome_text">Welcome!\nPlease enter your name and weight.</string>
    <string name="name_hint">Your Name</string>
    <string name="weight_hint">Your Weight</string>
    <string name="kg_label">kg</string>
    <string name="continue_label">Continue</string>
    <string name="sort_by">Sort by:</string>
    <string name="time_placeholder">00:00:00:00</string>
    <string name="finish">Finish</string>
    <string name="let_s_go_username">Let\'s go, %s!</string>
    <string name="running_app">Running App</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="cancel_run">Cancel Run</string>
    <string name="distance_binding_format">%.2f km</string>
    <string name="distance_binding_format_meters">%d m</string>
    <string name="avg_speed_binding_format">%.2f km/h</string>
    <string name="calories_burned_binding_format">%d kcal</string>
    <string name="avgspeed_holder">AVG SPEED</string>
    <string name="calories_holder">CALORIES</string>
    <string name="distance_holder">DISTANCE</string>
    <string name="time_holder">TIME</string>
    <string name="date_holder">DATE</string>
    <string name="track_snapshot">Track snapshot</string>
    <string name="changes_saved">Saved the changes</string>
    <string name="please_fill_all_fields">Please enter all the fields</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="your_weight">Your Weight</string>
    <string name="your_name">Your Name</string>
    <string name="total_distance">Total Distance</string>
    <string name="total_time">Total Time</string>
    <string name="total_calories_burned">Total Calories Burned</string>
    <string name="average_speed">Average Speed</string>
    <string name="whats_your_track_for_today">Whats your track for today?</string>
    <string name="your_runs">Your Runs</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="error_must_be_provided">%s must be provided</string>
    <string name="name">Name</string>
    <string name="weight">Weight</string>
    <string name="target_value">Target value</string>
    <string name="run_saved_successfully">Run saved successfully</string>
    <string name="running">Running</string>
    <string name="location_permissions_required_info">You need to accept location permissions to use this app.</string>
    <string name="no_music_app">No music app found on the device</string>
    <string name="target">target</string>
    <string name="progress_binding_format">%d %%</string>
    <string name="your_target">Your target</string>
    <string name="choose_target">Choose target</string>
    <string name="zero">0</string>
    <string name="target_reached">You reached the target!</string>
    <string name="run_deleted">Run data has been deleted</string>
    <string name="undo">Undo</string>
    <string name="run_restored">Deleted run has been restored</string>
    <string name="your_records">Your records</string>
</resources>
