<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="run"
            type="dev.jatzuk.mvvmrunning.db.Run" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/date_holder"
                android:textSize="20sp"
                app:setDate="@{run}" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/time_holder"
                android:textSize="20sp"
                app:setFormattedTime="@{run}" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvAvgSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/avgspeed_holder"
                android:textSize="20sp"
                app:setAvgSpeed="@{run}" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/distance_holder"
                android:textSize="20sp"
                app:setDistanceInKm="@{run}" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvCaloriesBurned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/calories_holder"
                android:textSize="20sp"
                app:setCaloriesBurned="@{run}" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</layout>
